feat: 添加中英文文档，完善配置文件支持
1. 添加完整的中英文 README
2. 增加配置文件通过 JSON 加载功能
3. 支持通过命令行参数指定配置文件
4. 更新 GitHub Actions 构建流程，支持打包配置文件
5. 统一配置管理方式

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,42 @@ jobs:
         CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o bin/file-server-windows-amd64.exe
         CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o bin/file-server-darwin-amd64
 
-    - name: Upload artifacts
+    - name: Create Release Packages
+      run: |
+        mkdir -p release/linux release/windows release/darwin
+        
+        # Copy binaries
+        cp bin/file-server-linux-amd64 release/linux/file-server
+        cp bin/file-server-windows-amd64.exe release/windows/file-server.exe
+        cp bin/file-server-darwin-amd64 release/darwin/file-server
+        
+        # Copy config and docs for each platform
+        for dir in release/*; do
+          cp config.json "$dir/"
+          cp README.md "$dir/"
+          cp -r static "$dir/"
+        done
+        
+        # Create archives
+        cd release
+        tar czf ../file-server-linux.tar.gz linux/
+        cd windows && zip -r ../../file-server-windows.zip . && cd ..
+        tar czf ../file-server-darwin.tar.gz darwin/
+
+    - name: Upload Linux Package
       uses: actions/upload-artifact@v4
       with:
-        name: binaries
-        path: bin/
+        name: file-server-linux
+        path: file-server-linux.tar.gz
+        
+    - name: Upload Windows Package
+      uses: actions/upload-artifact@v4
+      with:
+        name: file-server-windows
+        path: file-server-windows.zip
+        
+    - name: Upload macOS Package
+      uses: actions/upload-artifact@v4
+      with:
+        name: file-server-darwin
+        path: file-server-darwin.tar.gz
