fix: 修复 GitHub Actions 构建产物双重压缩问题
1. 移除手动压缩步骤
2. 使用 compression-level: 0 防止重复压缩
3. 更新 README.md 中的下载说明

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o bin/file-server-windows-amd64.exe
         CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o bin/file-server-darwin-amd64
 
-    - name: Create Release Packages
+    - name: Prepare Release Packages
       run: |
         mkdir -p release/linux release/windows release/darwin
         
@@ -62,27 +62,24 @@ jobs:
           cp README.md "$dir/"
           cp -r static "$dir/"
         done
-        
-        # Create archives
-        cd release
-        tar czf ../file-server-linux.tar.gz linux/
-        cd windows && zip -r ../../file-server-windows.zip . && cd ..
-        tar czf ../file-server-darwin.tar.gz darwin/
 
     - name: Upload Linux Package
       uses: actions/upload-artifact@v4
       with:
         name: file-server-linux
-        path: file-server-linux.tar.gz
+        path: release/linux/
+        compression-level: 0
         
     - name: Upload Windows Package
       uses: actions/upload-artifact@v4
       with:
         name: file-server-windows
-        path: file-server-windows.zip
+        path: release/windows/
+        compression-level: 0
         
     - name: Upload macOS Package
       uses: actions/upload-artifact@v4
       with:
         name: file-server-darwin
-        path: file-server-darwin.tar.gz
+        path: release/darwin/
+        compression-level: 0
