初始化文件服务器项目 - 实现文件上传/下载功能 - 实现目录浏览功能 - 修复文件下载路径问题

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,11 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}"
+            "program": "${workspaceFolder}",
+            "args": [
+                "-config",
+                "${workspaceFolder}/config.json"
+            ]
         },
         {
             "name": "Launch Frontend",
