--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "jwt_secret": "your-production-secret-key",
-    "storage_path": "./uploads",
+    "storage_path": "uploads",
     "admin_username": "admin",
     "admin_password": "strong-password",
     "listen_addr": ":8080"
